fixing spacing

--- a/portfolio_homepage/small.css
+++ b/portfolio_homepage/small.css
@@ -21,12 +21,12 @@ body {
 }
 .liNavTop {
     margin-top: 11px;
-    margin-left: 15px;
-    margin-right: 44px;
-    width: 79px;
+    width: auto;
     height: 26px;
     font-family: 'Poiret One', cursive;
     text-align: center;
+    display:flex;
+    justify-content:space-evenly;
     font-size: 24px;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0);
@@ -48,7 +48,7 @@ body {
     top: -39px;
     opacity: 1;
     height: 6px;
-    width: 79px;
+    width: auto;
     margin-top: 0px;
     align-items: center;
     z-index: 3;
@@ -76,6 +76,7 @@ body {
     align-items: flex-start;
     position:absolute;
     opacity:0;
+    width:2px;
     margin-top: 0px;
     top: 0px;
     z-index: 4;
@@ -91,7 +92,7 @@ body {
     justify-content: flex-start;
     flex-direction: column;
     background: rgba(0, 0, 0, 0);
-    font-size: 250px;
+    font-size: 200px;
     padding-left: 7%;
     font-family: 'Shadows Into Light', cursive;
     margin-block-start: 0em;
@@ -103,16 +104,16 @@ body {
 
 .wrap {
     position: absolute;
-    font-size: 48px;
+    font-size: 36px;
     font-family: 'Julius Sans One', sans-serif;
     background: rgba(0, 0, 0, 0);
     color: black;
     padding-left: 7%;
-    padding-top: 300px;
+    padding-top: 250px;
     margin-block-start: 0em;
     margin-block-end: 0em;
     font-weight: 300;
-    width: 320px;
+    width: 240px;
     z-index: 5;
 }
 .HOLMQUIST {
@@ -170,9 +171,9 @@ body {
     position: relative;
     display: flex;
     justify-content: flex-end;
-    font-size: 48px;
+    font-size: 36px;
     font-family: 'Julius Sans One', sans-serif;
-    margin-top: -52px;
+    margin-top: -39px;
     opacity: 1;
     z-index: 6;
 }
@@ -191,7 +192,7 @@ body {
     display: flex;
     justify-content: center;
     background: rgba(0, 0, 0, 0);
-    font-size: 24px;
+    font-size: 20px;
     font-family: 'Poiret One', cursive;
     width: 88%;
     height: auto;
@@ -255,12 +256,13 @@ body {
 .liNavFoot {
     display: flex;
     justify-content: space-evenly;
+    margin-right:10px;
+    margin-left:10px;
     margin-top: 20px;
-    width: 108px;
+    width: auto;
     height: 40px;
     font-family: 'Poiret One', cursive;
-    text-align: center;
-    font-size: 24px;
+    font-size: 18px;
     text-decoration: none;
     background: rgba(0, 0, 0, 0);
     z-index: 2;
